Feature/implement get workflow files (#125)
